--- a/marketplace-subgraph/subgraph.yaml
+++ b/marketplace-subgraph/subgraph.yaml
@@ -6,25 +6,25 @@ dataSources:
     name: DevMarketplace
     network: goerli
     source:
-      address: "0x374989864e548FDD6C761954FB41265e9D4bEe03"
+      address: '0x62A6EF16f4C7605E89F6EBBC38DAC89bC7Aacd0B'
       abi: DevMarketplace
-      startBlock: 8480234
+      startBlock: 8515355
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
       language: wasm/assemblyscript
       entities:
+        - NFTBought
         - NFTListed
         - NFTUnlisted
-        - UpdatedPrice
       abis:
         - name: DevMarketplace
           file: ./abis/DevMarketplace.json
       eventHandlers:
+        - event: NFTBought(address,address,uint256,uint256)
+          handler: handleNFTBought
         - event: NFTListed(address,uint256,uint256,address)
           handler: handleNFTListed
         - event: NFTUnlisted(address,uint256,address)
           handler: handleNFTUnlisted
-        - event: UpdatedPrice(address,uint256,uint256)
-          handler: handleUpdatedPrice
       file: ./src/dev-marketplace.ts
