--- a/marketplace-ui/package.json
+++ b/marketplace-ui/package.json
@@ -13,9 +13,13 @@
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@web3uikit/core": "^0.2.47",
+    "@web3uikit/icons": "^0.2.46",
+    "@web3uikit/web3": "^0.2.2",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-moralis": "^1.4.2",
     "typescript": "4.9.5"
   }
 }
