--- a/marketplace-ui/package.json
+++ b/marketplace-ui/package.json
@@ -21,5 +21,8 @@
     "react-dom": "18.2.0",
     "react-moralis": "^1.4.2",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.4"
   }
 }
