--- a/marketplace-ui/package.json
+++ b/marketplace-ui/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "marketplace-ui",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@next/font": "13.1.6",
-    "@types/node": "18.14.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@web3uikit/core": "^0.2.47",
-    "@web3uikit/icons": "^0.2.46",
-    "@web3uikit/web3": "^0.2.2",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-moralis": "^1.4.2",
-    "typescript": "4.9.5"
-  },
-  "devDependencies": {
-    "prettier": "^2.8.4"
-  }
+	"name": "marketplace-ui",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@apollo/client": "^3.7.9",
+		"@next/font": "13.1.6",
+		"@types/node": "18.14.0",
+		"@types/react": "18.0.28",
+		"@types/react-dom": "18.0.11",
+		"@web3uikit/core": "^0.2.47",
+		"@web3uikit/icons": "^0.2.46",
+		"@web3uikit/web3": "^0.2.2",
+		"ethers": "^6.0.5",
+		"graphql": "^16.6.0",
+		"magic-sdk": "^13.3.1",
+		"next": "13.1.6",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-moralis": "^1.4.2",
+		"typescript": "4.9.5"
+	},
+	"devDependencies": {
+		"prettier": "^2.8.4"
+	}
 }
