--- a/dev-marketplace-sepolia/subgraph.yaml
+++ b/dev-marketplace-sepolia/subgraph.yaml
@@ -1,4 +1,6 @@
-specVersion: 0.0.5
+specVersion: 1.0.0
+indexerHints:
+  prune: auto
 schema:
   file: ./schema.graphql
 dataSources:
@@ -6,7 +8,7 @@ dataSources:
     name: DevMarketplace
     network: sepolia
     source:
-      address: '0x38E915aa7BdEBf0638aCdBCE97baCaEE56872f80'
+      address: "0x38E915aa7BdEBf0638aCdBCE97baCaEE56872f80"
       abi: DevMarketplace
       startBlock: 5762708
     mapping:
